# Python-Rummy

./: .coveragerc  .gitignore  .replit  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  cards.py  pyproject.toml  requirements.txt  rummy.py  setup.py
colours/: colours.py
deck/: card.py  deck.py  rank.py
game/: round.py  score.py  setup.py  setup_players.py
player/: ai.py  dealer.py  hand.py  human.py  player.py  player_collection.py  player_config.py  playerconfig.py
rummy/: __init__.py  __main__.py  command_line.py  console_config.py  play.py  rummy.py
rummy/constants/: constants.py  package_resource_path.py  resource_path.py
rummy/controller/: ai_controller.py  human_controller.py  player_controller.py
rummy/deck/: card.py  deck.py  face_values.py  melds.py  rank.py  sort.py  suits.py
rummy/exception/: validation_error.py
rummy/game/: melds.py  menu_action_dialogs.py  players.py  round.py  score.py  setup_players.py  user_input.py  validator.py  view.py
rummy/player/: ai.py  dealer.py  hand.py  human.py  player.py  player_action_dialogs.py  player_actions.py
rummy/templates/: ai-discard-data.txt  ai-hand-data.txt  ai-thinking.txt  ai-turn-end.txt  hand-score.txt  knocked.txt  player-discarded.txt  player-turn-end.txt  (+3 more)
templates/: ai-turn-end.txt  hand-score.txt  knocked.txt  player-turn-end.txt  player-turn-start.txt  round-end.txt  round.txt
tests/: test_card.py  test_deck.py  test_face_values.py  test_hand.py  test_melds.py  test_player.py  test_rank.py  test_suits.py  test_unicode_support.py
view/: colour.py  colours.py  view.py
(+31 files in other folders)
