[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.11"]

[tool.poetry.scripts]
rummy = "rummy.__main__:main"

[tool]
[tool.poetry]
name = "rummy"
version = "2.1.4"
description = "Console Rummy game"
authors = ["Sarcoma <sean@orderandchaoscreative.com>"]
license = "MIT"
[tool.poetry.dependencies]
Pygments = "2.2.0"
ansi-colours = "0.2.6"
codecov = "2.0.15"
colorama = "0.4.0"
coverage = "4.5.1"
more-itertools = "4.3.0"
pytest = "3.10.0"
pytest-cov = "2.6.0"
pytest-mock = "1.10.0"
python = "^3.4"
text-template = "0.1.4"
[tool.poetry.dev-dependencies]
